tests/ui/issues/issue-72278.stderr
error: cannot specify lifetime arguments explicitly if late bound lifetime parameters are present
  --> $DIR/issue-72278.rs:12:14
   |
LL |     S.func::<'a, U>()
   |              ^^
   |
note: the late bound lifetime parameter is introduced here
  --> $DIR/issue-72278.rs:6:13
   |
LL |     fn func<'a, U>(&'a self) -> U {
   |             ^^
   = help: remove the explicit lifetime argument

error: aborting due to previous error

